<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xingzhi.android.biz.widget.TitleBar
        android:id="@+id/mTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:tbTitleText="@string/biz_today_label_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mBtnLogin1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:text="@string/biz_today_text_login_1"
        app:layout_constraintTop_toBottomOf="@+id/mTitleBar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mBtnLogin2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:text="@string/biz_today_text_login_2"
        app:layout_constraintTop_toBottomOf="@+id/mBtnLogin1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mBtnLogin3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:text="@string/biz_today_text_login_3"
        app:layout_constraintTop_toBottomOf="@+id/mBtnLogin2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/biz_today_text_login_description"
        android:textColor="@color/color_base_text2"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintTop_toBottomOf="@+id/mBtnLogin3" />

</androidx.constraintlayout.widget.ConstraintLayout>